# Hippo3D

./: .gitignore  .gitmodules  README.md  README_STAGE2.md  __init__.py  blender_manifest.example.toml  blender_manifest.toml  commands.py  common.py  cplanes.py  curves.py  geometry.py  main.py  operators.py  properties.py  registration.py  state.py  surfaces.py  test_in_blender.py  ui.py
.github/workflows/: build-native-occt.yml
kernels/: __init__.py  occ_kernel.py  occ_loader.py  occ_mesh_adapter.py
native/: CMakeLists.txt  README_BUILD.md  README_BUILD_LINUX.md  README_NATIVE.md  build_freebsd.sh  build_linux.sh  build_macos.sh  build_occt.sh  build_openbsd.sh  build_windows.ps1  bundle_occt.py  diagnose_windows_dll.py  hippo_surface_native.c
native/cmake/: FindOpenCASCADE.cmake
native/include/: occ_3dm.hpp  occ_boolean.hpp  occ_curves.hpp  occ_mesh.hpp  occ_primitives.hpp  occ_registry.hpp  occ_step.hpp  occ_surface_ops.hpp  occ_trim.hpp
native/src/: hippo_occ_core.cpp  occ_3dm.cpp  occ_boolean.cpp  occ_curves.cpp  occ_mesh.cpp  occ_primitives.cpp  occ_registry.cpp  occ_step.cpp  occ_surface_ops.cpp  occ_trim.cpp
